// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DelegateRegistrationForm should error if username is too long 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        class="space-y-8"
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-3xl"
              data-testid="header__title"
            >
              Register Delegate
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Register a new Delegate address on the network below.
            </div>
          </div>
        </div>
        <div
          class="flex overflow-hidden flex-col p-4 space-y-4 rounded-lg sm:flex-row sm:items-center sm:space-y-0 sm:space-x-4 bg-theme-warning-50 dark:bg-theme-secondary-800"
        >
          <div
            class="flex flex-shrink-0 justify-center items-center w-11 h-11 text-white rounded-lg bg-theme-warning-600"
          >
            <div
              class="sc-bdfBwQ hteSKx"
              height="1.25em"
              width="1.25em"
            >
              <svg>
                alert-warning.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col w-full"
          >
            <div
              class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
            >
              The Delegate name is permanent and cannot be modified later. It is registered on the network.
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 bRHEGF no-ligatures"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
            >
              Sender
            </div>
            <div
              class="font-semibold"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-2"
          >
            <div
              class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB"
              data-testid="Avatar"
            >
              <div
                class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-5"
        >
          <fieldset
            class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 qzrKg"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="username"
            >
              Delegate Name
            </label>
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jXtMoQ"
            >
              <div
                class="flex relative flex-1 h-full"
              >
                <input
                  aria-invalid="true"
                  class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                  data-testid="Input__username"
                  name="username"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-danger-500 dark:divide-theme-secondary-800"
              >
                <span
                  data-errortext="Delegate Name should have at most 20 characters"
                  data-testid="Input__error"
                >
                  <div
                    class="sc-bdfBwQ iyevwF text-theme-danger-500"
                    height="20"
                    width="20"
                  >
                    <svg>
                      alert-warning.svg
                    </svg>
                  </div>
                </span>
              </div>
            </div>
          </fieldset>
          <fieldset
            class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
            </label>
            <div
              class="flex space-x-2"
              data-testid="InputFee"
            >
              <div
                class="flex-1"
              >
                <div
                  class="relative"
                >
                  <div
                    class="fixed invisible w-auto whitespace-nowrap"
                  >
                    2…
                  </div>
                  <div
                    class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
                  >
                    <div
                      class="flex relative flex-1 h-full"
                    >
                      <input
                        class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                        data-testid="InputCurrency"
                        name="fee"
                        type="text"
                        value="2"
                      />
                    </div>
                  </div>
                  <div
                    class="absolute bottom-0 px-1 w-full"
                  >
                    <div
                      class="flex flex-wrap justify-center"
                      data-testid="Range"
                    >
                      <div
                        class="Range__Track-sc-10itqc2-0 sgjTD"
                        data-testid="Range__track"
                        style="transform: scale(1); cursor: pointer;"
                      >
                        <div
                          class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                          data-testid="Range__track__filled"
                        >
                          <div
                            aria-valuemax="10"
                            aria-valuemin="0"
                            aria-valuenow="2"
                            class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                            data-testid="Range__thumb"
                            draggable="false"
                            role="slider"
                            style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                            tabindex="0"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="inline-flex items-center space-x-2"
                data-testid="ButtonGroup"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
                  data-testid="ButtonGroupOption"
                  disabled=""
                  role="radio"
                  type="button"
                >
                  Slow
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Average
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Fast
                </button>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm should render form step 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        class="space-y-8"
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-3xl"
              data-testid="header__title"
            >
              Register Delegate
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Register a new Delegate address on the network below.
            </div>
          </div>
        </div>
        <div
          class="flex overflow-hidden flex-col p-4 space-y-4 rounded-lg sm:flex-row sm:items-center sm:space-y-0 sm:space-x-4 bg-theme-warning-50 dark:bg-theme-secondary-800"
        >
          <div
            class="flex flex-shrink-0 justify-center items-center w-11 h-11 text-white rounded-lg bg-theme-warning-600"
          >
            <div
              class="sc-bdfBwQ hteSKx"
              height="1.25em"
              width="1.25em"
            >
              <svg>
                alert-warning.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col w-full"
          >
            <div
              class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
            >
              The Delegate name is permanent and cannot be modified later. It is registered on the network.
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 bRHEGF no-ligatures"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
            >
              Sender
            </div>
            <div
              class="font-semibold"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-2"
          >
            <div
              class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB"
              data-testid="Avatar"
            >
              <div
                class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-5"
        >
          <fieldset
            class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="username"
            >
              Delegate Name
            </label>
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
            >
              <div
                class="flex relative flex-1 h-full"
              >
                <input
                  class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                  data-testid="Input__username"
                  name="username"
                  value=""
                />
              </div>
            </div>
          </fieldset>
          <fieldset
            class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
            </label>
            <div
              class="flex space-x-2"
              data-testid="InputFee"
            >
              <div
                class="flex-1"
              >
                <div
                  class="relative"
                >
                  <div
                    class="fixed invisible w-auto whitespace-nowrap"
                  >
                    2…
                  </div>
                  <div
                    class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
                  >
                    <div
                      class="flex relative flex-1 h-full"
                    >
                      <input
                        class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                        data-testid="InputCurrency"
                        name="fee"
                        type="text"
                        value="2"
                      />
                    </div>
                  </div>
                  <div
                    class="absolute bottom-0 px-1 w-full"
                  >
                    <div
                      class="flex flex-wrap justify-center"
                      data-testid="Range"
                    >
                      <div
                        class="Range__Track-sc-10itqc2-0 sgjTD"
                        data-testid="Range__track"
                        style="transform: scale(1); cursor: pointer;"
                      >
                        <div
                          class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                          data-testid="Range__track__filled"
                        >
                          <div
                            aria-valuemax="10"
                            aria-valuemin="0"
                            aria-valuenow="2"
                            class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                            data-testid="Range__thumb"
                            draggable="false"
                            role="slider"
                            style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                            tabindex="0"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="inline-flex items-center space-x-2"
                data-testid="ButtonGroup"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
                  data-testid="ButtonGroupOption"
                  disabled=""
                  role="radio"
                  type="button"
                >
                  Slow
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Average
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Fast
                </button>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm should render review step 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="DelegateRegistrationForm__review-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-3xl"
              data-testid="header__title"
            >
              Transaction Review
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Review the transaction details below.
            </div>
          </div>
        </div>
        <div
          class="mt-8 TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 UsFpT no-ligatures"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
            >
              Cryptoasset
            </div>
            <div
              class="font-semibold"
            >
              ARK Devnet
            </div>
          </div>
          <div
            aria-label="ARK Devnet"
            class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 text-theme-primary-400 ring-theme-background"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 cHOkoL no-ligatures"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
            >
              Sender
            </div>
            <div
              class="font-semibold"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-2"
          >
            <div
              class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB"
              data-testid="Avatar"
            >
              <div
                class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 cHOkoL no-ligatures"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
            >
              Delegate Name
            </div>
            <div
              class="font-semibold"
            />
          </div>
        </div>
        <div
          class="mt-2"
        >
          <div
            class="rounded-lg border border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="relative p-4"
            >
              <div
                class="flex divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
              >
                <div
                  class="flex flex-col justify-center py-2 px-4 w-1/2"
                >
                  <span
                    class="TotalAmountBox__AmountLabel-sc-178fnso-0 gGuMGd"
                  >
                    Transaction Amount
                  </span>
                  <span
                    class="mt-1 text-lg font-semibold"
                    data-testid="total-amount-box__transaction-amount"
                  >
                    0 DARK
                  </span>
                </div>
                <div
                  class="flex flex-col justify-center py-2 px-4 w-1/2 text-right"
                >
                  <span
                    class="TotalAmountBox__AmountLabel-sc-178fnso-0 gGuMGd"
                  >
                    Transaction Fee
                  </span>
                  <span
                    class="mt-1 text-lg font-semibold"
                    data-testid="total-amount-box__transaction-fee"
                  >
                    2 DARK
                  </span>
                </div>
              </div>
              <div
                class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2"
              >
                <div
                  class="py-2 ml-px bg-theme-background text-theme-secondary-900 dark:text-theme-secondary-600"
                >
                  <div
                    class="sc-bdfBwQ fPrsah"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      plus.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex flex-col items-center py-6 rounded-b-lg border-t border-theme-secondary-300 justfiy-center bg-theme-secondary-100 dark:border-theme-secondary-800 dark:bg-theme-secondary-800"
            >
              <span
                class="TotalAmountBox__AmountLabel-sc-178fnso-0 gGuMGd"
              >
                Total Amount
              </span>
              <span
                class="text-2xl font-bold"
                data-testid="total-amount-box__total"
              >
                2 DARK
              </span>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm should set fee 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        class="space-y-8"
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-3xl"
              data-testid="header__title"
            >
              Register Delegate
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Register a new Delegate address on the network below.
            </div>
          </div>
        </div>
        <div
          class="flex overflow-hidden flex-col p-4 space-y-4 rounded-lg sm:flex-row sm:items-center sm:space-y-0 sm:space-x-4 bg-theme-warning-50 dark:bg-theme-secondary-800"
        >
          <div
            class="flex flex-shrink-0 justify-center items-center w-11 h-11 text-white rounded-lg bg-theme-warning-600"
          >
            <div
              class="sc-bdfBwQ hteSKx"
              height="1.25em"
              width="1.25em"
            >
              <svg>
                alert-warning.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col w-full"
          >
            <div
              class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
            >
              The Delegate name is permanent and cannot be modified later. It is registered on the network.
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 bRHEGF no-ligatures"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
            >
              Sender
            </div>
            <div
              class="font-semibold"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-2"
          >
            <div
              class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB"
              data-testid="Avatar"
            >
              <div
                class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-5"
        >
          <fieldset
            class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="username"
            >
              Delegate Name
            </label>
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
            >
              <div
                class="flex relative flex-1 h-full"
              >
                <input
                  class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                  data-testid="Input__username"
                  name="username"
                  value=""
                />
              </div>
            </div>
          </fieldset>
          <fieldset
            class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
            </label>
            <div
              class="flex space-x-2"
              data-testid="InputFee"
            >
              <div
                class="flex-1"
              >
                <div
                  class="relative"
                >
                  <div
                    class="fixed invisible w-auto whitespace-nowrap"
                  >
                    10…
                  </div>
                  <div
                    class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
                  >
                    <div
                      class="flex relative flex-1 h-full"
                    >
                      <input
                        class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                        data-testid="InputCurrency"
                        name="fee"
                        type="text"
                        value="10"
                      />
                    </div>
                  </div>
                  <div
                    class="absolute bottom-0 px-1 w-full"
                  >
                    <div
                      class="flex flex-wrap justify-center"
                      data-testid="Range"
                    >
                      <div
                        class="Range__Track-sc-10itqc2-0 sgjTD"
                        data-testid="Range__track"
                        style="transform: scale(1); cursor: pointer;"
                      >
                        <div
                          class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                          data-testid="Range__track__filled"
                        >
                          <div
                            aria-valuemax="10"
                            aria-valuemin="0"
                            aria-valuenow="10"
                            class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                            data-testid="Range__thumb"
                            draggable="false"
                            role="slider"
                            style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                            tabindex="0"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="inline-flex items-center space-x-2"
                data-testid="ButtonGroup"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
                  data-testid="ButtonGroupOption"
                  disabled=""
                  role="radio"
                  type="button"
                >
                  Slow
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Average
                </button>
                <button
                  aria-checked="true"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Fast
                </button>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm should set username 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        class="space-y-8"
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-3xl"
              data-testid="header__title"
            >
              Register Delegate
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Register a new Delegate address on the network below.
            </div>
          </div>
        </div>
        <div
          class="flex overflow-hidden flex-col p-4 space-y-4 rounded-lg sm:flex-row sm:items-center sm:space-y-0 sm:space-x-4 bg-theme-warning-50 dark:bg-theme-secondary-800"
        >
          <div
            class="flex flex-shrink-0 justify-center items-center w-11 h-11 text-white rounded-lg bg-theme-warning-600"
          >
            <div
              class="sc-bdfBwQ hteSKx"
              height="1.25em"
              width="1.25em"
            >
              <svg>
                alert-warning.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col w-full"
          >
            <div
              class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
            >
              The Delegate name is permanent and cannot be modified later. It is registered on the network.
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 bRHEGF no-ligatures"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
            >
              Sender
            </div>
            <div
              class="font-semibold"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-2"
          >
            <div
              class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB"
              data-testid="Avatar"
            >
              <div
                class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-5"
        >
          <fieldset
            class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="username"
            >
              Delegate Name
            </label>
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
            >
              <div
                class="flex relative flex-1 h-full"
              >
                <input
                  class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                  data-testid="Input__username"
                  name="username"
                  value=""
                />
              </div>
            </div>
          </fieldset>
          <fieldset
            class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
            </label>
            <div
              class="flex space-x-2"
              data-testid="InputFee"
            >
              <div
                class="flex-1"
              >
                <div
                  class="relative"
                >
                  <div
                    class="fixed invisible w-auto whitespace-nowrap"
                  >
                    2…
                  </div>
                  <div
                    class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
                  >
                    <div
                      class="flex relative flex-1 h-full"
                    >
                      <input
                        class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                        data-testid="InputCurrency"
                        name="fee"
                        type="text"
                        value="2"
                      />
                    </div>
                  </div>
                  <div
                    class="absolute bottom-0 px-1 w-full"
                  >
                    <div
                      class="flex flex-wrap justify-center"
                      data-testid="Range"
                    >
                      <div
                        class="Range__Track-sc-10itqc2-0 sgjTD"
                        data-testid="Range__track"
                        style="transform: scale(1); cursor: pointer;"
                      >
                        <div
                          class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                          data-testid="Range__track__filled"
                        >
                          <div
                            aria-valuemax="10"
                            aria-valuemin="0"
                            aria-valuenow="2"
                            class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                            data-testid="Range__thumb"
                            draggable="false"
                            role="slider"
                            style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                            tabindex="0"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="inline-flex items-center space-x-2"
                data-testid="ButtonGroup"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
                  data-testid="ButtonGroupOption"
                  disabled=""
                  role="radio"
                  type="button"
                >
                  Slow
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Average
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Fast
                </button>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm should show error if username already exists 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        class="space-y-8"
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-3xl"
              data-testid="header__title"
            >
              Register Delegate
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Register a new Delegate address on the network below.
            </div>
          </div>
        </div>
        <div
          class="flex overflow-hidden flex-col p-4 space-y-4 rounded-lg sm:flex-row sm:items-center sm:space-y-0 sm:space-x-4 bg-theme-warning-50 dark:bg-theme-secondary-800"
        >
          <div
            class="flex flex-shrink-0 justify-center items-center w-11 h-11 text-white rounded-lg bg-theme-warning-600"
          >
            <div
              class="sc-bdfBwQ hteSKx"
              height="1.25em"
              width="1.25em"
            >
              <svg>
                alert-warning.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col w-full"
          >
            <div
              class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
            >
              The Delegate name is permanent and cannot be modified later. It is registered on the network.
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 bRHEGF no-ligatures"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
            >
              Sender
            </div>
            <div
              class="font-semibold"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-2"
          >
            <div
              class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB"
              data-testid="Avatar"
            >
              <div
                class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-5"
        >
          <fieldset
            class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 qzrKg"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="username"
            >
              Delegate Name
            </label>
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jXtMoQ"
            >
              <div
                class="flex relative flex-1 h-full"
              >
                <input
                  aria-invalid="true"
                  class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                  data-testid="Input__username"
                  name="username"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-danger-500 dark:divide-theme-secondary-800"
              >
                <span
                  data-errortext="Delegate Name already exists"
                  data-testid="Input__error"
                >
                  <div
                    class="sc-bdfBwQ iyevwF text-theme-danger-500"
                    height="20"
                    width="20"
                  >
                    <svg>
                      alert-warning.svg
                    </svg>
                  </div>
                </span>
              </div>
            </div>
          </fieldset>
          <fieldset
            class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
            </label>
            <div
              class="flex space-x-2"
              data-testid="InputFee"
            >
              <div
                class="flex-1"
              >
                <div
                  class="relative"
                >
                  <div
                    class="fixed invisible w-auto whitespace-nowrap"
                  >
                    2…
                  </div>
                  <div
                    class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
                  >
                    <div
                      class="flex relative flex-1 h-full"
                    >
                      <input
                        class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                        data-testid="InputCurrency"
                        name="fee"
                        type="text"
                        value="2"
                      />
                    </div>
                  </div>
                  <div
                    class="absolute bottom-0 px-1 w-full"
                  >
                    <div
                      class="flex flex-wrap justify-center"
                      data-testid="Range"
                    >
                      <div
                        class="Range__Track-sc-10itqc2-0 sgjTD"
                        data-testid="Range__track"
                        style="transform: scale(1); cursor: pointer;"
                      >
                        <div
                          class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                          data-testid="Range__track__filled"
                        >
                          <div
                            aria-valuemax="10"
                            aria-valuemin="0"
                            aria-valuenow="2"
                            class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                            data-testid="Range__thumb"
                            draggable="false"
                            role="slider"
                            style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                            tabindex="0"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="inline-flex items-center space-x-2"
                data-testid="ButtonGroup"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
                  data-testid="ButtonGroupOption"
                  disabled=""
                  role="radio"
                  type="button"
                >
                  Slow
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Average
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Fast
                </button>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm should show error if username contains illegal characters 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        class="space-y-8"
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-3xl"
              data-testid="header__title"
            >
              Register Delegate
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Register a new Delegate address on the network below.
            </div>
          </div>
        </div>
        <div
          class="flex overflow-hidden flex-col p-4 space-y-4 rounded-lg sm:flex-row sm:items-center sm:space-y-0 sm:space-x-4 bg-theme-warning-50 dark:bg-theme-secondary-800"
        >
          <div
            class="flex flex-shrink-0 justify-center items-center w-11 h-11 text-white rounded-lg bg-theme-warning-600"
          >
            <div
              class="sc-bdfBwQ hteSKx"
              height="1.25em"
              width="1.25em"
            >
              <svg>
                alert-warning.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col w-full"
          >
            <div
              class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
            >
              The Delegate name is permanent and cannot be modified later. It is registered on the network.
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 bRHEGF no-ligatures"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2 w-40 whitespace-nowrap"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
            >
              Sender
            </div>
            <div
              class="font-semibold"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              >
                <span
                  class="text-base font-semibold text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-2"
          >
            <div
              class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB"
              data-testid="Avatar"
            >
              <div
                class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-5"
        >
          <fieldset
            class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 qzrKg"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="username"
            >
              Delegate Name
            </label>
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jXtMoQ"
            >
              <div
                class="flex relative flex-1 h-full"
              >
                <input
                  aria-invalid="true"
                  class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                  data-testid="Input__username"
                  name="username"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-danger-500 dark:divide-theme-secondary-800"
              >
                <span
                  data-errortext="The following characters are not allowed: '<', '>'"
                  data-testid="Input__error"
                >
                  <div
                    class="sc-bdfBwQ iyevwF text-theme-danger-500"
                    height="20"
                    width="20"
                  >
                    <svg>
                      alert-warning.svg
                    </svg>
                  </div>
                </span>
              </div>
            </div>
          </fieldset>
          <fieldset
            class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
            </label>
            <div
              class="flex space-x-2"
              data-testid="InputFee"
            >
              <div
                class="flex-1"
              >
                <div
                  class="relative"
                >
                  <div
                    class="fixed invisible w-auto whitespace-nowrap"
                  >
                    2…
                  </div>
                  <div
                    class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
                  >
                    <div
                      class="flex relative flex-1 h-full"
                    >
                      <input
                        class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                        data-testid="InputCurrency"
                        name="fee"
                        type="text"
                        value="2"
                      />
                    </div>
                  </div>
                  <div
                    class="absolute bottom-0 px-1 w-full"
                  >
                    <div
                      class="flex flex-wrap justify-center"
                      data-testid="Range"
                    >
                      <div
                        class="Range__Track-sc-10itqc2-0 sgjTD"
                        data-testid="Range__track"
                        style="transform: scale(1); cursor: pointer;"
                      >
                        <div
                          class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                          data-testid="Range__track__filled"
                        >
                          <div
                            aria-valuemax="10"
                            aria-valuemin="0"
                            aria-valuenow="2"
                            class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                            data-testid="Range__thumb"
                            draggable="false"
                            role="slider"
                            style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                            tabindex="0"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="inline-flex items-center space-x-2"
                data-testid="ButtonGroup"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
                  data-testid="ButtonGroupOption"
                  disabled=""
                  role="radio"
                  type="button"
                >
                  Slow
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Average
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Fast
                </button>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;
